[gd_scene load_steps=21 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Generate.gd" type="Script" id=2]
[ext_resource path="res://KeyFramer.gd" type="Script" id=3]
[ext_resource path="res://Music.gd" type="Script" id=4]
[ext_resource path="res://Writer.gd" type="Script" id=5]
[ext_resource path="res://Seeker.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.027451, 0.027451, 0.027451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="ImageTexture" id=7]

[sub_resource type="ImageTexture" id=8]

[sub_resource type="ImageTexture" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.376471, 0.376471, 0.376471, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Fields" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -480.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="Fields"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generate" type="Button" parent="Fields"]
margin_left = 16.0
margin_top = 544.0
margin_right = 304.0
margin_bottom = 576.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Generate"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyFramer" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_right = 1.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSong" type="Button" parent="KeyFramer"]
margin_left = 296.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 55.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Load Song"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="KeyFramer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 280.0
margin_bottom = 55.0
custom_styles/read_only = SubResource( 6 )
align = 1
editable = false
placeholder_text = "Path To File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="KeyFramer"]
margin_left = 16.0
margin_top = 86.0
margin_right = 688.0
margin_bottom = 568.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Mega/Music/Bpm_Calculated"
current_file = "100_Follow_the_Beat.ogg"
current_path = "/Mega/Music/Bpm_Calculated/100_Follow_the_Beat.ogg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="KeyFramer"]
script = ExtResource( 4 )

[node name="Beat" type="Label" parent="KeyFramer"]
margin_left = 16.0
margin_top = 71.0
margin_right = 116.0
margin_bottom = 85.0
text = "Current Beat : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pos" type="Label" parent="KeyFramer"]
margin_left = 16.0
margin_top = 88.0
margin_right = 116.0
margin_bottom = 102.0
text = "Song Position : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="KeyFramer"]
margin_left = -304.0
margin_top = 495.0
margin_right = -168.0
margin_bottom = 528.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="KeyFramer"]
margin_left = -152.0
margin_top = 496.0
margin_right = -16.0
margin_bottom = 528.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="KeyFramer"]
margin_left = -304.0
margin_top = 448.0
margin_right = -16.0
margin_bottom = 480.0
custom_icons/grabber_disabled = SubResource( 7 )
custom_icons/grabber_highlight = SubResource( 8 )
custom_icons/grabber = SubResource( 9 )
custom_styles/slider = SubResource( 10 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 11 )
min_value = -50.0
max_value = 0.0
value = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="KeyFramer/HSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.341176, 0.341176, 0.341176, 1 )
text = "Volume"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Writer" type="Panel" parent="KeyFramer"]
margin_left = 16.0
margin_top = 144.0
margin_right = 464.0
margin_bottom = 273.0
custom_styles/panel = SubResource( 12 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="KeyFramer/Writer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -41.0
margin_right = -17.0
margin_bottom = -9.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beat" type="SpinBox" parent="KeyFramer/Writer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 431.0
margin_bottom = 40.0
rounded = true
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="KeyFramer/Writer"]
margin_left = 16.0
margin_top = 50.0
margin_right = 431.0
margin_bottom = 74.0
placeholder_text = "Value"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPM" type="SpinBox" parent="KeyFramer"]
margin_left = 296.0
margin_top = 72.0
margin_right = 464.0
margin_bottom = 104.0
max_value = 999.0
value = 120.0
allow_greater = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameList" type="ItemList" parent="KeyFramer"]
margin_left = 16.0
margin_top = 288.0
margin_right = 464.0
margin_bottom = 584.0
allow_rmb_select = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seeker" type="ProgressBar" parent="KeyFramer"]
margin_left = 16.0
margin_top = 113.0
margin_right = 368.0
margin_bottom = 136.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
max_value = 1.0
step = 0.0
value = 0.5
percent_visible = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="KeyFramer/Seeker"]
margin_left = 360.0
margin_top = -1.0
margin_right = 401.0
margin_bottom = 23.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foward" type="Button" parent="KeyFramer/Seeker"]
margin_left = 408.0
margin_top = -1.0
margin_right = 449.0
margin_bottom = 23.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="KeyFramer/HSlider" to="KeyFramer/Music" method="_on_HSlider_value_changed"]
[connection signal="button_up" from="KeyFramer/Writer/Add" to="KeyFramer/Writer" method="_on_Add_button_up"]
[connection signal="value_changed" from="KeyFramer/BPM" to="KeyFramer/Writer" method="_on_BPM_value_changed"]
[connection signal="item_rmb_selected" from="KeyFramer/FrameList" to="KeyFramer/Writer" method="_on_FrameList_item_rmb_selected"]
